[package]
name = "open-rsp"
version = "0.1.0"
authors = ["Asncodes-80 <asn80.asn@hotmail.com>"]
edition = "2021"
keywords = ["networking", "rust", "driver", "snmp", "kafka"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
kafka = "0.9"
log = "0.4.17"
simple_logger = "4.1.0"
tokio = { version = "1.27.0", features = ["full"] }
